lab-3/12-tokyo-waf.tf
############################################
# Lab 3: Tokyo Regional WAF (for ALB)
############################################

resource "aws_wafv2_web_acl" "chewbacca_tokyo_waf01" {
  name        = "${local.tokyo_prefix}-tokyo-waf01"
  description = "WAF for Chewbacca Tokyo ALB"
  scope       = "REGIONAL"

  default_action {
    allow {}
  }

  # Rule 1: IP Reputation List
  rule {
    name     = "AWS-AWSManagedRulesAmazonIpReputationList"
    priority = 0

    override_action {
      none {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesAmazonIpReputationList"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.tokyo_prefix}-tokyo-ip-reputation"
      sampled_requests_enabled   = true
    }
  }

  # Rule 2: Common Rule Set
  rule {
    name     = "AWS-AWSManagedRulesCommonRuleSet"
    priority = 1

    override_action {
      none {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesCommonRuleSet"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.tokyo_prefix}-tokyo-common-rules"
      sampled_requests_enabled   = true
    }
  }

  # Rule 3: Known Bad Inputs
  rule {
    name     = "AWS-AWSManagedRulesKnownBadInputsRuleSet"
    priority = 2

    override_action {
      none {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesKnownBadInputsRuleSet"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.tokyo_prefix}-tokyo-bad-inputs"
      sampled_requests_enabled   = true
    }
  }

  # Rule 4: SQLi Rule Set
  rule {
    name     = "AWS-AWSManagedRulesSQLiRuleSet"
    priority = 3

    override_action {
      none {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesSQLiRuleSet"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.tokyo_prefix}-tokyo-sqli-rules"
      sampled_requests_enabled   = true
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "${local.tokyo_prefix}-tokyo-waf"
    sampled_requests_enabled   = true
  }

  tags = merge(local.tokyo_tags, {
    Name = "${local.tokyo_prefix}-tokyo-waf01"
  })
}

resource "aws_wafv2_web_acl_association" "chewbacca_tokyo_waf_alb_assoc" {
  resource_arn = aws_lb.chewbacca_alb01.arn
  web_acl_arn  = aws_wafv2_web_acl.chewbacca_tokyo_waf01.arn
}
